[package]
name = "zv-ctrl-bmdse"
version = "0.1.0"
edition = "2024"

[dependencies]
bmdse = "0.1.0"
log = "0.4.29"
pretty_env_logger = "0.5.0"
tokio = { version = "1.49.0", features = ["macros", "rt", "rt-multi-thread"] }
zeevonk = { version = "0.1.0", path = "../zeevonk/crates/zeevonk", features = ["client-controller"] }
color-eyre = { version = "0.6", default-features = false }
